# edge-sdk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yaml
examples/: modbus_rtu_sensor.py  modbus_tcp_plc.py  opcua_ignition.py  opcua_kepware.py  outbound_data.py  outbound_upload.py  serial_esp32_camera.py  serial_esp32_sensor.py  storage_file.py  storage_sqlite.py
examples/controllers/: biobox_manager.py  temp_monitor.py
examples/devices/: factory_camera.py  ignition_scada.py  power_meter.py  pulse_oximeter.py  temp_pressure_sensor.py  uart_sensor.py
examples/outbound/: photos.py  sensor_data.py
examples/storage/: history.py  images.py
gateways/gateway-001/device-001/: config.py
scadable/: __init__.py  actions.py  cli.py  connections.py  constants.py  controller.py  device.py  fields.py  historian.py  outbound.py  schedule.py  storage.py  system.py
scadable/edge/: __init__.py  cli.py  constants.py  device.py
scadable/edge/outbound/: __init__.py  base.py
scadable/edge/protocols/: __init__.py  base.py  modbus.py  opcua.py  serial.py
scadable/edge/storage/: __init__.py  base.py  file.py  sqlite.py
