[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scadable-cli"
version = "0.2.0"
description = "Edge SDK for the Scadable IoT platform"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["iot", "scada", "edge", "modbus", "industrial"]
dependencies = []

[project.scripts]
scadable = "scadable.edge.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["scadable*"]
